# wspz

./: .gitignore  README.md  WSpZ.lektorproject  netlify.toml  pyproject.toml  requirements.txt
assets/: _redirects
configs/: atom.ini  disqus-comments.ini
content/: contents.lr
content/404.html/: contents.lr
content/blog/: contents.lr
content/calendar/: contents.lr
content/community/: contents.lr
content/courses/: contents.lr
content/docs/: contents.lr
content/kalender/: contents.lr
content/kurse/: contents.lr
content/sigs/: contents.lr
content/wiki/: contents.lr
databags/: apis.ini  email.ini  menu.ini
flowblocks/: address.ini  alert.ini  attachments.ini  calendar.ini  children.ini  comments.ini  forecast.ini  grey.ini  image.ini  images.ini  light.ini  pullquote.ini  transparent.ini  windfinder.ini  windy.ini  windyty.ini  youtube.ini
models/: blog-post.ini  blog.ini  event.ini  events.ini  news-post.ini  news.ini  page.ini  wiki.ini
templates/: 404.html  blog-post.html  blog.html  event.html  events.html  home.html  layout.html  news-post.html  news.html  page.html  robots.txt  wiki-suggestion.html  wiki.html
templates/blocks/: address.html  alert.html  attachments.html  calendar.html  children.html  comments.html  forecast.html  grey.html  image.html  images.html  light.html  pullquote.html  text.html  transparent.html  windfinder.html  windy.html  windyty.html  youtube.html
templates/macros/: blog.html  breadcrumbs.html  pagination.html  widget.html
webpack/: package.json  webpack.config.js
webpack/js/: calendar.js  main.js  (+1 more)
(+68 files in other folders)
