[tool.poetry]
name = "wspz"
version = "0.1.0"
description = ""
authors = ["Nils Werner <nils@hey.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Lektor = "^3.1"
lektor-atom = "^0.2"
lektor-webpack-support = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
